--- a/index.html
+++ b/index.html
@@ -131,40 +131,30 @@ background-color: #f50e0e;
         </div>
       </div>
     </nav>
-    <!-- <div class="container ">
-      <button class="btn btn-danger text-center ms-5  " id="signOutButton">Sign Out</button>
-      <div id="message">
-        <p>You have signed in as <span id="userName"></span> with the email <span id="userEmail"></span></p>
-      </div>
-    </div> -->
-    <nav class="container navbar navbar-expand-lg navbar-light" style="background-color:  rgb(237, 26, 37);">
-      <div class="container-fluid">
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-          <ul class="navbar-nav me-auto mb-2 mb-lg-0 " style="gap: 20px;">
-            <li class="nav-item">
-              <button type="button" class="btn btn-danger border border-light rounded-pill active"><i
-                  class="fa-solid fa-bed p-2 "></i>Stays </button>
-            </li>
-            <li class="nav-item">
-              <button type="button" class="btn btn-danger border border-light rounded-pill"><i
-                  class="fa-solid fa-plane-departure p-2"></i> Flights</button>
-            </li>
-            <li class="nav-item">
-              <button type="button" class="btn btn-danger border border-light rounded-pill"><i
-                  class="fa-solid fa-earth-europe p-2"></i> Flight+Hotel</button>
-            </li>
-            <li class="nav-item">
-              <button type="button" class="btn btn-danger border border-light rounded-pill"><i
-                  class="fa-solid fa-car p-2"></i> Car Rental</button>
-            </li>
-            <li class="nav-item">
-              <button type="button" class="btn btn-danger border border-light rounded-pill"><i
-                  class="fa-solid fa-taxi p-2"></i>Airpot taxis</button>
-            </li>
-          </ul>
-        </div>
-      </div>
-    </nav>
+    <!-- Second navigation bar: centered content -->
+    <div class="scrollmenu text-center" style="background-color:#FF1717;">
+      <a href="#home"><button type="button" class="btn text-light border rounded-pill active">
+          <i class="fa-solid fa-bed p-2"></i>Stays
+        </button></a>
+      <a href="#news"><button type="button" class="btn text-light rounded-pill">
+          <i class="fa-solid fa-bus p-2"></i> Bus
+        </button></a>
+      <a href="#contact"><button type="button" class="btn text-light rounded-pill">
+          <i class="fa-solid fa-earth-europe p-2"></i> Flight+Hotel
+        </button></a>
+      <a href="#about"><button type="button" class="btn text-light rounded-pill">
+          <i class="fa-solid fa-car p-2"></i> Car Rental
+        </button></a>
+      <a href="#about"><button type="button" class="btn text-light rounded-pill">
+          <i class="fa-solid fa-blog p-2"></i> Blogs
+        </button></a>
+      <a href="#about"><button type="button" class="btn text-light rounded-pill">
+          <i class="fa-solid fa-blog p-2"></i> View Cart
+        </button></a>
+      <a href="#about"><button type="button" class="btn text-light rounded-pill">
+          <i class="fa-solid fa-blog p-2"></i> About Us
+        </button></a>
+    </div>
   </header>
   <main>
     <div class="p-5 mb-4 bg-body-tertiary" style="background-image: url(./assets/img/Rectangle\ 377.jpg); background-repeat: no-repeat; background-size: cover; background-color: rgb(237, 26, 37);">
