--- a/login/index.html
+++ b/login/index.html
@@ -1,4 +1,4 @@
-!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en" data-bs-theme="auto">
 <head>
   <script src="../assets/js/color-modes.js"></script>
