--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@ background-color: #f50e0e;
           <!-- Second column -->
           <div class="col-5 col-md-4 col-lg-4 d-flex justify-content-center align-items-center">
             <a class="navbar-brand" href="../index.html">
-              <img src="../assets/img/Frame 223.png" alt="" class="d-inline-block align-top">
+              <img src="./assets/img/Frame 223.png" alt="" class="d-inline-block align-top">
             </a>
           </div>
           <!-- Third column -->
