--- a/index.html
+++ b/index.html
@@ -115,13 +115,13 @@ background-color: #f50e0e;
           <div class=" col-md-4 col-lg-4"></div>
           <!-- Second column -->
           <div class="col-5 col-md-4 col-lg-4 d-flex justify-content-center align-items-center">
-            <a class="navbar-brand" href="../index.html">
+            <a class="navbar-brand" href="index.html">
               <img src="./assets/img/Frame 223.png" alt="" class="d-inline-block align-top">
             </a>
           </div>
           <!-- Third column -->
           <div class="col-7 col-md-4 col-lg-4 d-flex justify-content-end align-items-center mt-2 mt-md-0">
-            <a class="nav-link" href="../login/index.html">
+            <a class="nav-link" href="./login/index.html">
               <button type="button" class="btn btn-light text-danger"
                 style="height: 30px; display: flex; align-items: center; justify-content: center;">
                 <b>Sign in</b>
