--- a/index.html
+++ b/index.html
@@ -23,85 +23,64 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
     integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A=="
     crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <script src="assets/index-asset/script.js"></script>   
+    <script src="assets/index-asset/script.js">
+
+</script>  
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/flatpickr/dist/flatpickr.min.css">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
 <!-- firebase script start -->
-  <script type="module">
-    import { initializeApp } from "https://www.gstatic.com/firebasejs/10.0.0/firebase-app.js";
-    import { getAuth, onAuthStateChanged, signOut } from "https://www.gstatic.com/firebasejs/10.0.0/firebase-auth.js";
-    const firebaseConfig = {
-        apiKey: "AIzaSyCp2e7CNo83HwDx_HAVgY_IDh0_KW2Y0HI",
-        authDomain: "y-spot-e84ca.firebaseapp.com",
-        databaseURL: "https://y-spot-e84ca-default-rtdb.firebaseio.com",
-        projectId: "y-spot-e84ca",
-        storageBucket: "y-spot-e84ca.appspot.com",
-        messagingSenderId: "783996806068",
-        appId: "1:783996806068:web:298ca1ddb4dfb7e758c8e1",
-        measurementId: "G-TSH2JVYJHR"
-    };
-    const app = initializeApp(firebaseConfig);
-    const auth = getAuth();
+<script type="module">
+  import { initializeApp } from "https://www.gstatic.com/firebasejs/10.0.0/firebase-app.js";
+  import { getAuth, onAuthStateChanged, signOut } from "https://www.gstatic.com/firebasejs/10.0.0/firebase-auth.js";
 
-    window.onload = () => {
-        const signOutButton = document.getElementById("signOutButton");
-        const buttonElement = signOutButton.querySelector("button");
+  const firebaseConfig = {
+    apiKey: "AIzaSyCp2e7CNo83HwDx_HAVgY_IDh0_KW2Y0HI",
+    authDomain: "y-spot-e84ca.firebaseapp.com",
+    databaseURL: "https://y-spot-e84ca-default-rtdb.firebaseio.com",
+    projectId: "y-spot-e84ca",
+    storageBucket: "y-spot-e84ca.appspot.com",
+    messagingSenderId: "783996806068",
+    appId: "1:783996806068:web:298ca1ddb4dfb7e758c8e1",
+    measurementId: "G-TSH2JVYJHR"
+  };
 
-        onAuthStateChanged(auth, (user) => {
-          
-            if (user) {
-                buttonElement.innerHTML = "<b>Sign Out</b>";
-                signOutButton.href = "#";
-                buttonElement.onclick = () => {
-                    signOut(auth).then(() => {
-                        alert("You have signed out successfully!");
-                        window.location.reload();
-                    }).catch((error) => {
-                        console.error(error);
-                    });
-                };
-            } else {
-                buttonElement.innerHTML = "<b>Sign In</b>";
-                signOutButton.href = "login/index.html";
-                buttonElement.onclick = null;
-            }
-        });
-    };
+  const app = initializeApp(firebaseConfig);
+  const auth = getAuth();
+
+  window.onload = () => {
+    const userDetails = document.getElementById("userDetails");
+    const registerButton = document.getElementById("registerButton");
+
+    onAuthStateChanged(auth, (user) => {
+      if (user) {
+        userDetails.style.display = "block";
+        registerButton.style.display = "none";
+        document.getElementById("userName").textContent = user.displayName || "User";
+      } else {
+        userDetails.style.display = "none";
+        registerButton.style.display = "block";
+      }
+    });
+  };
 </script>
-<!-- firebase script end -->
-<style>
-  .navbar-nav {
-    flex-wrap: nowrap;
-  }
-
-  .navbar-nav.scrollable {
-    overflow-x: auto;
-    -webkit-overflow-scrolling: touch;
-    white-space: nowrap;
-  }
-
-  .navbar-nav.scrollable .nav-item {
-    display: inline-block;
-  }
-</style>
 <style>
   div.scrollmenu {
-background-color: #333;
-overflow: auto;
-white-space: nowrap;
+  background-color: #333;
+  overflow: auto;
+  white-space: nowrap;
 }
 
 div.scrollmenu a {
-display: inline-block;
-color: white;
-text-align: center;
-padding: 14px;
-text-decoration: none;
+  display: inline-block;
+  color: white;
+  text-align: center;
+  padding: 14px;
+  text-decoration: none;
 }
 
 div.scrollmenu a:hover {
-background-color: #f50e0e;
+  background-color: #f50e0e;
 }
 </style>
 </head>
@@ -115,16 +94,20 @@ background-color: #f50e0e;
           <div class=" col-md-4 col-lg-4"></div>
           <!-- Second column -->
           <div class="col-5 col-md-4 col-lg-4 d-flex justify-content-center align-items-center">
-            <a class="navbar-brand" href="index.html">
+            <a class="navbar-brand" href="./index.html">
               <img src="./assets/img/Frame 223.png" alt="" class="d-inline-block align-top">
             </a>
           </div>
           <!-- Third column -->
           <div class="col-7 col-md-4 col-lg-4 d-flex justify-content-end align-items-center mt-2 mt-md-0">
             <a class="nav-link" href="./login/index.html">
-              <button type="button" class="btn btn-light text-danger"
+              <button id="registerButton" type="button" class="btn btn-light text-danger"
                 style="height: 30px; display: flex; align-items: center; justify-content: center;">
-                <b>Sign in</b>
+                <b>Register</b>
+              </button>
+              <button id="userDetails" style="display: none;" type="button" class="btn btn-light text-danger"
+                style="height: 30px; display: flex; align-items: center; justify-content: center;">
+                <b id="userName"></b>
               </button>
             </a>
           </div>
