--- a/index.html
+++ b/index.html
@@ -63,6 +63,10 @@
       }
     });
   };
+  document.getElementById('logoutButton').addEventListener('click', function() {
+        // Add your logout functionality here
+        alert('Logging out...');
+    });
 </script>
 <style>
   div.scrollmenu {
@@ -89,31 +93,53 @@ div.scrollmenu a:hover {
     <!-- First navigation bar: Registration and Sign In buttons -->
     <nav class="navbar" style="background-color: #FF1717;">
       <div class="container">
-        <div class="row w-100">
-          <!-- First column -->
-          <div class=" col-md-4 col-lg-4"></div>
-          <!-- Second column -->
-          <div class="col-5 col-md-4 col-lg-4 d-flex justify-content-center align-items-center">
-            <a class="navbar-brand" href="./index.html">
-              <img src="./assets/img/Frame 223.png" alt="" class="d-inline-block align-top">
-            </a>
+          <div class="row w-100">
+              <!-- First column -->
+              <div class="col-md-4 col-lg-4"></div>
+              <!-- Second column -->
+              <div class="col-5 col-md-4 col-lg-4 d-flex justify-content-center align-items-center">
+                  <a class="navbar-brand" href="./index.html">
+                      <img src="./assets/img/Frame 223.png" alt="" class="d-inline-block align-top">
+                  </a>
+              </div>
+              <!-- Third column -->
+              <div class="col-7 col-md-4 col-lg-4 d-flex justify-content-end align-items-center mt-2 mt-md-0">
+                  <a class="nav-link" href="./login/index.html">
+                      <button id="registerButton" type="button" class="btn btn-light text-danger"
+                          style="height: 30px; display: flex; align-items: center; justify-content: center;">
+                          <b>Register</b>
+                      </button>
+                  </a>
+                  <span class="d-flex align-items-center">
+                      <li class="nav-item dropdown list-unstyled">
+                          <a id="userDetails" style="display: none;" class="nav-link dropdown-toggle d-flex align-items-center" href="#" id="profileDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                              <img src="https://via.placeholder.com/30" class="rounded-circle profile-icon" alt="Profile Icon">
+                              <span class="username text-light" id="userName"></span>
+                          </a>
+                          <div class="dropdown-menu dropdown-menu-right" aria-labelledby="profileDropdown">
+                              <a class="dropdown-item" href="#" id="logoutButton">Logout</a>
+                          </div>
+                      </li>
+                  </span>
+              </div>
           </div>
-          <!-- Third column -->
-          <div class="col-7 col-md-4 col-lg-4 d-flex justify-content-end align-items-center mt-2 mt-md-0">
-            <a class="nav-link" href="./login/index.html">
-              <button id="registerButton" type="button" class="btn btn-light text-danger"
-                style="height: 30px; display: flex; align-items: center; justify-content: center;">
-                <b>Register</b>
-              </button>
-              <button id="userDetails" style="display: none;" type="button" class="btn btn-light text-danger"
-                style="height: 30px; display: flex; align-items: center; justify-content: center;">
-                <b id="userName"></b>
-              </button>
-            </a>
-          </div>
-        </div>
       </div>
-    </nav>
+  </nav>
+  <style>
+    .profile-icon {
+        width: 30px;
+        height: 30px;
+    }
+    .username {
+        margin-left: 10px;
+    }
+</style>
+<script>
+    document.getElementById('logoutButton').addEventListener('click', function() {
+        // Add your logout functionality here
+        alert('Logging out...');
+    });
+</script>
     <!-- Second navigation bar: centered content -->
     <div class="scrollmenu text-center" style="background-color:#FF1717;">
       <a href="#home"><button type="button" class="btn text-light border rounded-pill active">
