login page button and name email showing  bug is cleared

--- a/login/index.html
+++ b/login/index.html
@@ -59,9 +59,9 @@
         </div>
 
         <div class="container ">
-          <button class="btn btn-danger text-center" id="signOutButton">Sign Out</button>
+          <!-- <button class="btn btn-danger text-center" id="signOutButton">Sign Out</button> -->
           <div id="message">
-            <p>You have signed in as <span id="userName"></span> with the email <span id="userEmail"></span></p>
+            <!-- <p>You have signed in as <span id="userName"></span> with the email <span id="userEmail"></span></p> -->
           </div>
         </div>
 
