--- a/login/index.html
+++ b/login/index.html
@@ -58,10 +58,10 @@
           </div>
         </div>
 
-        <div class="container ">
-          <!-- <button class="btn btn-danger text-center" id="signOutButton">Sign Out</button> -->
+        <div class="container " style="display: none;">
+          <button class="btn btn-danger text-center" id="signOutButton">Sign Out</button>
           <div id="message">
-            <!-- <p>You have signed in as <span id="userName"></span> with the email <span id="userEmail"></span></p> -->
+            <p>You have signed in as <span id="userName"></span> with the email <span id="userEmail"></span></p>
           </div>
         </div>
 
