index page footer top section cards are responsive design code writed

--- a/index.html
+++ b/index.html
@@ -449,10 +449,10 @@ div.scrollmenu a:hover {
         </div>
         <!-- discover your property type end -->
         <!-- Why Book Hotels with Y.Spot.com? start -->
-        <h1 class="text-center pt-3">Why Book Hotels with Y.Spot.com?</h1>
+        <h1 class="text-center pt-3">Why Book Hotels with YSpot.app?</h1>
         <div class="container my-5">
           <div class="row justify-content-center align-items-stretch">
-            <div class="col-md-3 pb-4">
+            <div class="col-12 col-lg-3 col-md-6 pb-4">
               <div class="card text-center border-danger align-items-stretch">
                 <img src="assets/img/index page icons footer/Frame 402.jpg" alt="Profile Image" class="card-img-circle">
                 <div class="card-body">
@@ -461,7 +461,7 @@ div.scrollmenu a:hover {
                 </div>
               </div>
             </div>
-            <div class="col-md-3 pb-4">
+            <div class="col-12 col-lg-3 col-md-6 pb-4">
               <div class="card text-center border-danger align-items-stretch">
                 <img src="assets/img/index page icons footer/Frame 403.jpg" alt="Profile Image" class="card-img-circle">
                 <div class="card-body">
@@ -470,7 +470,7 @@ div.scrollmenu a:hover {
                 </div>
               </div>
             </div>
-            <div class="col-md-3 pb-4">
+            <div class="col-12 col-lg-3 col-md-6 pb-4">
               <div class="card text-center border-danger align-items-stretch">
                 <img src="assets/img/index page icons footer/Frame 404.jpg" alt="Profile Image" class="card-img-circle">
                 <div class="card-body">
@@ -479,7 +479,7 @@ div.scrollmenu a:hover {
                 </div>
               </div>
             </div>
-            <div class="col-md-3 pb-4">
+            <div class="col-12 col-lg-3 col-md-6 pb-4">
               <div class="card text-center border-danger align-items-stretch">
                 <img src="assets/img/index page icons footer/Frame 405.jpg" alt="Profile Image" class="card-img-circle">
                 <div class="card-body">
