index page offer section card responsive and alignment are changed and used a horizantal card

--- a/index.html
+++ b/index.html
@@ -285,20 +285,18 @@ div.scrollmenu a:hover {
       <p class="text-dark">Promotions, deals, and special offers for you</p>
       <div class="row row-cols-1 row-cols-md-2 g-4 pb-3">
         <div class="col">
-          <div class="card">
-            <div class="row g-0">
-              <div class="col-md-4 text-center rounded-3">
-                <img src="./assets/img/offer index/Rectangle 387 (2).png" style="height: 200px;"
-                  class="rounded-start img-fluid p-3" alt="...">
+          <div class="card mb-3" style="max-width: 540px;">
+            <div class="row no-gutters">
+              <div class="col-md-4 justify-content-center align-items-center">
+                <img src="./assets/img/offer index/Rectangle 387 (2).png" class="card-img" height="100%" alt="...">
               </div>
               <div class="col-md-8">
                 <div class="card-body">
                   <h5 class="card-title">We have Family-Special Theme Park
                     Packages for You....</h5>
                   <p class="card-text">Book with us & enjoy limitless fun this summer.</p>
-                  <p class="card-text"><button type="button" class="btn text-white"
+                  <button type="button" class="btn text-white"
                       style="background-color:  rgb(237, 26, 37);">Explore Now</button>
-                  </p>
                 </div>
               </div>
             </div>
