--- a/details-page/details.html
+++ b/details-page/details.html
@@ -29,10 +29,27 @@
   <!-- Flatpickr CSS CDN -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/flatpickr/dist/flatpickr.min.css">
   <!-- Custom CSS -->
+  <!-- form get javascript element start  -->
+  <script>
+    document.addEventListener("DOMContentLoaded", function () {
+      const urlParams = new URLSearchParams(window.location.search);
+      const location = urlParams.get('location');
+      const dates = urlParams.get('dates');
+      const guests = urlParams.get('guests');
+
+      document.getElementById('location').value = location;
+      document.getElementById('dates').value = dates;
+      document.getElementById('guests').value = guests;
+
+      const redirectLink = document.getElementById('redirectLink');
+      redirectLink.href = `../single-hotel-page/index.html?location=${encodeURIComponent(location)}&dates=${encodeURIComponent(dates)}&guests=${encodeURIComponent(guests)}`;
+    });
+  </script>
+  <!-- form get javascript element end  -->
   <script type="module">
     import { initializeApp } from "https://www.gstatic.com/firebasejs/10.0.0/firebase-app.js";
     import { getAuth, onAuthStateChanged, signOut } from "https://www.gstatic.com/firebasejs/10.0.0/firebase-auth.js";
-  
+
     const firebaseConfig = {
       apiKey: "AIzaSyCp2e7CNo83HwDx_HAVgY_IDh0_KW2Y0HI",
       authDomain: "y-spot-e84ca.firebaseapp.com",
@@ -43,14 +60,14 @@
       appId: "1:783996806068:web:298ca1ddb4dfb7e758c8e1",
       measurementId: "G-TSH2JVYJHR"
     };
-  
+
     const app = initializeApp(firebaseConfig);
     const auth = getAuth();
-  
+
     window.onload = () => {
       const userDetails = document.getElementById("userDetails");
       const registerButton = document.getElementById("registerButton");
-  
+
       onAuthStateChanged(auth, (user) => {
         if (user) {
           userDetails.style.display = "block";
@@ -140,19 +157,22 @@
     <!-- hero section search form start -->
     <div class="container custom-container rounded" id="move1" style="background-color: #1C1B1F; width: 100%;">
       <div class="container">
-        <form>
+        <form action="/details-page/details.html" method="get">
           <div class="row justify-content-center rounded-3">
             <!-- Destination -->
             <div class="form-group col-lg-3 col-md-6 col-sm-12">
-              <input type="text" class="form-control" id="location" placeholder="Enter destination" required>
+              <input type="text" class="form-control" id="location" name="location" placeholder="Enter destination"
+                required>
             </div>
             <!-- Check-in and Check-out Dates -->
             <div class="form-group col-lg-4 col-md-6 col-sm-12">
-              <input type="text" class="form-control" id="dates" placeholder="Check-in - Check-out" required>
+              <input type="text" class="form-control" id="dates" name="dates" placeholder="Check-in - Check-out"
+                required>
             </div>
             <!-- Combined Input Box for Adults, Children, and Rooms -->
             <div class="form-group col-lg-3 col-md-6 col-sm-12">
-              <input type="text" class="form-control" id="guests" placeholder="Adults, Children & Rooms" required>
+              <input type="text" class="form-control" id="guests" name="guests" placeholder="Adults, Children & Rooms"
+                required>
               <div class="dropdown-menu p-3" id="guestsDropdown" aria-labelledby="guestsDropdown"
                 style="display: none;">
                 <div class="form-group">
@@ -195,8 +215,8 @@
             </div>
             <!-- Search Button -->
             <div class="form-group col-lg-2 col-md-6 col-sm-12">
-              <button type="button" class="btn text-light" id="search" style="background-color: #FF1717;"
-                onclick="window.location.href='./details-page/details.html'">Search</button>
+              <button type="submit" class="btn text-light" id="search"
+                style="background-color: #FF1717;">Search</button>
             </div>
           </div>
         </form>
@@ -991,7 +1011,7 @@
                   <div class="row">
                     <div class="col-12 col-md-4 col-lg-3 mb-4 mb-lg-0">
                       <div class="bg-image hover-zoom ripple rounded ripple-surface">
-                        <a href="../single-hotel-page/index.html">
+                        <a href="../single-hotel-page/index.html" id="redirectLink">
                           <img src="./hotel images/Screenshot (7) 1.jpg" class="w-100" />
                         </a>
                         <a href="#!">
