--- a/reservation-page/reservation.html
+++ b/reservation-page/reservation.html
@@ -15,10 +15,42 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
         integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
-        
+      <script>
+    document.addEventListener("DOMContentLoaded", function () {
+      const urlParams = new URLSearchParams(window.location.search);
+      const location = urlParams.get('location');
+      const dates = urlParams.get('dates');
+      const guests = urlParams.get('guests');
+
+      document.getElementById('location').value = location;
+      document.getElementById('dates').value = dates;
+      document.getElementById('guests').value = guests;
+
+      const redirectLink = document.getElementById('redirectLink');
+      redirectLink.href = `../index.html?location=${encodeURIComponent(location)}&dates=${encodeURIComponent(dates)}&guests=${encodeURIComponent(guests)}`;
+    });
+  </script>
 </head>
 
 <body>
+    <div class="container mt-5">
+        <h2>Room Booking Details</h2>
+        <form>
+          <div class="form-group">
+            <label for="location">Location</label>
+            <input type="text" class="form-control" id="location" name="location" value="" readonly>
+          </div>
+          <div class="form-group">
+            <label for="dates">Dates</label>
+            <input type="text" class="form-control" id="dates" name="dates" value="" readonly>
+          </div>
+          <div class="form-group">
+            <label for="guests">Guests</label>
+            <input type="text" class="form-control" id="guests" name="guests" value="" readonly>
+          </div>
+        </form>
+        
+    </div>
     <header>
         <!-- First navigation bar: Registration and Sign In buttons -->
         <nav class="navbar" style="background-color: #FF1717;">
@@ -281,7 +313,7 @@
             <div class="border container shadow-sm rounded-3 mb-3">
                 <div class="total-cost-overview">
                     <div class="d-flex bd-highlight justify-content-center align-items-center">
-                        <a href="../confirmationpage/confirmation.html"><img class="px-1" src="image/payment method icons/stars.jpg" alt="" style="width: 45px; height: 40px;"></a>
+                        <a id="redirectLink" href="#" ><img class="px-1" src="image/payment method icons/stars.jpg" alt="" style="width: 45px; height: 40px;"></a>
                         <div class="p-1 w-100 bd-highlight"><a href="../confirmationpage/confirmation.html" class="text-dark" style="text-decoration: none;"><b style="font-size: 16px;">Reservation</b> <br>Pay when you
                             check-in</a></div>
                         <div class="p-3 flex-shrink-1 bd-highlight "> <img src="../confirmationpage/confirmation.html" alt="">
