--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@ div.scrollmenu a:hover {
      <!-- hero section search form start -->
      <div class="container custom-container rounded" id="move2" style="background-color: #1C1B1F; width: 100%;">
       <div class="container">
-        <form action="details-page/details.html" method="get" >
+        <form action="./details-page/details.html" method="get" >
           <div class="row justify-content-center rounded-3">
             <!-- Destination -->
             <div class="form-group col-lg-3 col-md-6 col-sm-12">
