--- a/confirmationpage/confirmation.html
+++ b/confirmationpage/confirmation.html
@@ -60,7 +60,7 @@
                                     <!-- check-in checkout start -->
                                     <div class="row justify-content-between ms-4 pt-1">
                                         <div class="col-lg-6 col-md-6">
-                                            <p>Dates <br> <b id="checkinDate">Mon, 27 May, 2024</b> <br> </p>
+                                            <p>Dates <br> <b id="checkinDate"></b> <br> </p>
                                         </div>
                                     </div>
                                 </div>
