--- a/reservation-page/reservation.html
+++ b/reservation-page/reservation.html
@@ -30,6 +30,40 @@
       redirectLink.href = `../confirmationpage/confirmation.html?location=${encodeURIComponent(location)}&dates=${encodeURIComponent(dates)}&guests=${encodeURIComponent(guests)}`;
     });
   </script>
+  <script type="module">
+    import { initializeApp } from "https://www.gstatic.com/firebasejs/10.0.0/firebase-app.js";
+    import { getAuth, onAuthStateChanged, signOut } from "https://www.gstatic.com/firebasejs/10.0.0/firebase-auth.js";
+
+    const firebaseConfig = {
+      apiKey: "AIzaSyCp2e7CNo83HwDx_HAVgY_IDh0_KW2Y0HI",
+      authDomain: "y-spot-e84ca.firebaseapp.com",
+      databaseURL: "https://y-spot-e84ca-default-rtdb.firebaseio.com",
+      projectId: "y-spot-e84ca",
+      storageBucket: "y-spot-e84ca.appspot.com",
+      messagingSenderId: "783996806068",
+      appId: "1:783996806068:web:298ca1ddb4dfb7e758c8e1",
+      measurementId: "G-TSH2JVYJHR"
+    };
+
+    const app = initializeApp(firebaseConfig);
+    const auth = getAuth();
+
+    window.onload = () => {
+      const userDetails = document.getElementById("userDetails");
+      const registerButton = document.getElementById("registerButton");
+
+      onAuthStateChanged(auth, (user) => {
+        if (user) {
+          userDetails.style.display = "block";
+          registerButton.style.display = "none";
+          document.getElementById("userName").textContent = user.displayName || "User";
+        } else {
+          userDetails.style.display = "none";
+          registerButton.style.display = "block";
+        }
+      });
+    };
+  </script>
 </head>
 
 <body>
@@ -51,55 +85,59 @@
         </form>
         
     </div>
-    <header>
+    <header id="included-insideheader">
         <!-- First navigation bar: Registration and Sign In buttons -->
-        <nav class="navbar" style="background-color: #FF1717;">
-          <div class="container">
-            <div class="row w-100">
-              <!-- First column -->
-              <div class=" col-md-4 col-lg-4"></div>
-              <!-- Second column -->
-              <div class="col-5 col-md-4 col-lg-4 d-flex justify-content-center align-items-center">
-                <a class="navbar-brand" href="../index.html">
-                  <img src="../assets/img/Frame 223.png" alt="" class="d-inline-block align-top">
-                </a>
-              </div>
-              <!-- Third column -->
-              <div class="col-7 col-md-4 col-lg-4 d-flex justify-content-end align-items-center mt-2 mt-md-0">
-                <a class="nav-link" href="../login/index.html">
-                  <button type="button" class="btn btn-light text-danger"
-                    style="height: 30px; display: flex; align-items: center; justify-content: center;">
-                    <b>Sign in</b>
-                  </button>
-                </a>
-              </div>
-            </div>
-          </div>
-        </nav>
-        <!-- Second navigation bar: centered content -->
-        <div class="scrollmenu text-center" style="background-color:#FF1717;">
-          <a href="#home"><button type="button" class="btn text-light border rounded-pill active">
-              <i class="fa-solid fa-bed p-2"></i>Stays
-            </button></a>
-          <a href="#news"><button type="button" class="btn text-light rounded-pill">
-              <i class="fa-solid fa-bus p-2"></i> Bus
-            </button></a>
-          <a href="#contact"><button type="button" class="btn text-light rounded-pill">
-              <i class="fa-solid fa-earth-europe p-2"></i> Flight+Hotel
-            </button></a>
-          <a href="#about"><button type="button" class="btn text-light rounded-pill">
-              <i class="fa-solid fa-car p-2"></i> Car Rental
-            </button></a>
-          <a href="#about"><button type="button" class="btn text-light rounded-pill">
-              <i class="fa-solid fa-blog p-2"></i> Blogs
-            </button></a>
-          <a href="#about"><button type="button" class="btn text-light rounded-pill">
-              <i class="fa-solid fa-blog p-2"></i> View Cart
-            </button></a>
-          <a href="#about"><button type="button" class="btn text-light rounded-pill">
-              <i class="fa-solid fa-blog p-2"></i> About Us
-            </button></a>
+<nav class="navbar" style="background-color: #FF1717;">
+    <div class="container">
+      <div class="row w-100">
+        <!-- First column -->
+        <div class=" col-md-4 col-lg-4"></div>
+        <!-- Second column -->
+        <div class="col-5 col-md-4 col-lg-4 d-flex justify-content-center align-items-center">
+          <a class="navbar-brand" href="../index.html">
+            <img src="../assets/img/Frame 223.png" alt="" class="d-inline-block align-top">
+          </a>
         </div>
+        <!-- Third column -->
+        <div class="col-7 col-md-4 col-lg-4 d-flex justify-content-end align-items-center mt-2 mt-md-0">
+          <a class="nav-link" href="../login/index.html">
+            <button id="registerButton" type="button" class="btn btn-light text-danger"
+              style="height: 30px; display: flex; align-items: center; justify-content: center;">
+              <b>Register</b>
+            </button>
+            <button id="userDetails" style="display: none;" type="button" class="btn btn-light text-danger"
+              style="height: 30px; display: flex; align-items: center; justify-content: center;">
+              <b id="userName"></b>
+            </button>
+          </a>
+        </div>
+      </div>
+    </div>
+  </nav>
+  <!-- Second navigation bar: centered content -->
+  <div class="scrollmenu text-center" style="background-color:#FF1717;">
+    <a href="#home"><button type="button" class="btn text-light border rounded-pill active">
+        <i class="fa-solid fa-bed p-2"></i>Stays
+      </button></a>
+    <a href="#news"><button type="button" class="btn text-light rounded-pill">
+        <i class="fa-solid fa-bus p-2"></i> Bus
+      </button></a>
+    <a href="#contact"><button type="button" class="btn text-light rounded-pill">
+        <i class="fa-solid fa-earth-europe p-2"></i> Flight+Hotel
+      </button></a>
+    <a href="#about"><button type="button" class="btn text-light rounded-pill">
+        <i class="fa-solid fa-car p-2"></i> Car Rental
+      </button></a>
+    <a href="#about"><button type="button" class="btn text-light rounded-pill">
+        <i class="fa-solid fa-blog p-2"></i> Blogs
+      </button></a>
+    <a href="#about"><button type="button" class="btn text-light rounded-pill">
+        <i class="fa-solid fa-blog p-2"></i> View Cart
+      </button></a>
+    <a href="#about"><button type="button" class="btn text-light rounded-pill">
+        <i class="fa-solid fa-blog p-2"></i> About Us
+      </button></a>
+  </div>
       </header>
     <main>
         <div class="container">
@@ -457,6 +495,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js"
         integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+"
         crossorigin="anonymous"></script>
+    <script src="script.js"></script>
 </body>
 
 </html>
