--- a/single-hotel-page/index.html
+++ b/single-hotel-page/index.html
@@ -14,6 +14,7 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
     integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A=="
     crossorigin="anonymous" referrerpolicy="no-referrer" />
+    
     <script type="module">
       import { initializeApp } from "https://www.gstatic.com/firebasejs/10.0.0/firebase-app.js";
       import { getAuth, onAuthStateChanged, signOut } from "https://www.gstatic.com/firebasejs/10.0.0/firebase-auth.js";
@@ -33,21 +34,65 @@
       const auth = getAuth();
   
       window.onload = () => {
-        const userDetails = document.getElementById("userDetails");
-        const registerButton = document.getElementById("registerButton");
+        const userDetailsContainer = document.getElementById("userDetailsContainer");
+        const registerLink = document.getElementById("registerLink");
+        const loginLink = document.getElementById("loginLink");
   
         onAuthStateChanged(auth, (user) => {
           if (user) {
-            userDetails.style.display = "block";
-            registerButton.style.display = "none";
+            userDetailsContainer.style.display = "block";
+            registerLink.style.display = "none";
+            loginLink.style.display = "none";
             document.getElementById("userName").textContent = user.displayName || "User";
           } else {
-            userDetails.style.display = "none";
-            registerButton.style.display = "block";
+            userDetailsContainer.style.display = "none";
+            registerLink.style.display = "block";
+            loginLink.style.display = "block";
           }
         });
       };
+  
+      document.getElementById('logoutButton').addEventListener('click', function () {
+        signOut(auth).then(() => {
+          alert('Logged out successfully');
+          // Hide user details and show register and login links
+          document.getElementById("userDetailsContainer").style.display = "none";
+          document.getElementById("registerLink").style.display = "block";
+          document.getElementById("loginLink").style.display = "block";
+          // Redirect to login page or home page after logout
+          window.location.href = '../login/index.html';
+        }).catch((error) => {
+          console.error('Error logging out: ', error);
+          alert('Error logging out. Please try again.');
+        });
+      });
     </script>
+  
+  <script>
+    document.addEventListener("DOMContentLoaded", function() {
+      const fetchContent = async (url) => {
+        const response = await fetch(url);
+        if (!response.ok) throw new Error('Network response was not ok');
+        return response.text();
+      };
+  
+      const loadContent = async () => {
+        try {
+          const [headerData, footerData] = await Promise.all([
+            fetchContent('../includes/confiremationheader.html'),
+            fetchContent('../includes/insidefooter.html')
+          ]);
+  
+          document.getElementById('included-confiremationheader').innerHTML = headerData;
+          document.getElementById('included-insidefooter').innerHTML = footerData;
+        } catch (error) {
+          console.error('Error fetching content:', error);
+        }
+      };
+  
+      loadContent();
+    });
+  </script>
   <script>
     document.addEventListener("DOMContentLoaded", function () {
       const urlParams = new URLSearchParams(window.location.search);
@@ -63,36 +108,71 @@
       redirectLink.href = `../reservation-page/reservation.html?location=${encodeURIComponent(location)}&dates=${encodeURIComponent(dates)}&guests=${encodeURIComponent(guests)}`;
     });
   </script>
-  <script>
-    document.addEventListener("DOMContentLoaded", function() {
-      const fetchContent = async (url) => {
-        const response = await fetch(url);
-        if (!response.ok) throw new Error('Network response was not ok');
-        return response.text();
-      };
-  
-      const loadContent = async () => {
-        try {
-          const [headerData, footerData] = await Promise.all([
-            fetchContent('../includes/insideheader.html'),
-            fetchContent('../includes/insidefooter.html')
-          ]);
-  
-          document.getElementById('included-insideheader').innerHTML = headerData;
-          document.getElementById('included-insidefooter').innerHTML = footerData;
-        } catch (error) {
-          console.error('Error fetching content:', error);
-        }
-      };
-  
-      loadContent();
-    });
-  </script>
+
 </head>
 
 <body>
-  <header id="included-insideheader">
-    
+  <header>
+    <nav class="navbar navbar-expand topbarstatic-top" style="background-color: #FF1717;">
+      <!-- First column -->
+      <div class="container">
+        <div class="row w-100">
+          <div class="col-lg-4"></div>
+          <!-- Second column -->
+          <div class="col-12 col-md-5 col-lg-4 d-flex justify-content-center align-items-center">
+            <a class="navbar-brand" href="../index.html">
+              <img src="../assets/img/Frame 223.png" alt="" class="d-inline-block align-top">
+            </a>
+          </div>
+          <!-- Third column -->
+          <div class="col-12 col-md-7 col-lg-4 d-flex justify-content-center align-items-center mt-2">
+            <a class="nav-link" href="../login/signup.html" id="registerLink">
+              <button id="registerButton" type="button" class="btn btn-light text-danger"
+                style="height: 30px; display: flex; align-items: center; justify-content: center;">
+                <b>Register</b>
+              </button>
+            </a>
+            <a class="nav-link" href="../login/index.html" id="loginLink">
+              <button id="loginButton" type="button" class="btn btn-light text-danger"
+                style="height: 30px; display: flex; align-items: center; justify-content: center;">
+                <b>Login</b>
+              </button>
+            </a>
+            <!-- Topbar Navbar -->
+            <ul class="navbar-nav ml-auto">
+              <!-- Nav Item - User Information -->
+              <li class="nav-item dropdown no-arrow" id="userDetailsContainer">
+                <a class="nav-link dropdown-toggle" href="#" id="userDropdown" role="button" data-toggle="dropdown"
+                   aria-haspopup="true" aria-expanded="false">
+                  <span class="mr-2 d-none d-lg-inline text-gray-600 text-light" id="userName"></span>
+                  <img class="img-profile rounded-circle" src="img/undraw_profile.svg">
+                </a>
+                <!-- Dropdown - User Information -->
+                <div class="dropdown-menu dropdown-menu-right shadow animated--grow-in " aria-labelledby="userDropdown">
+                  <a class="dropdown-item" href="#">
+                    <i class="fas fa-user fa-sm fa-fw mr-2 text-gray-400"></i>
+                    Profile
+                  </a>
+                  <div class="dropdown-divider"></div>
+                  <a class="dropdown-item" href="#" data-toggle="modal" data-target="#logoutModal" id="logoutButton">
+                    <i class="fas fa-sign-out-alt fa-sm fa-fw mr-2 text-gray-400"></i>
+                    Logout
+                  </a>
+                </div>
+              </li>
+            </ul>
+            <style>
+              @media (max-width: 1080.98px) {
+                #userName {
+                  display: inline !important;
+                }
+              }
+            </style>
+          </div>
+        </div>
+      </div>
+    </nav>
+    <div class="" id="included-confiremationheader"></div>
   </header>
   <main>
     <!-- brudcrum start -->
@@ -543,6 +623,9 @@
     integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+"
     crossorigin="anonymous"></script>
   <script src="script.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 </body>
 
 </html>
