--- a/index.html
+++ b/index.html
@@ -39,13 +39,12 @@
           <!-- Second column -->
           <div class="col-12 col-md-5 col-lg-4 d-flex justify-content-center align-items-center">
             <a class="navbar-brand" href="../index.html">
-              <img src="../assets/img/Frame 224.png"  alt="" class="d-inline-block align-top">
+              <img src="/assets/index-asset/Frame 223.png"  alt="" class="d-inline-block align-top">
             </a>
           </div>
           <!-- Third column -->
           <div class="col-12 col-md-7 col-lg-4 d-flex justify-content-center align-items-center mt-2">
             <a class="nav-link" href="../login/signup.html" id="registerLink">
-              <button id="registerButton" type="button" class="btn btn-light text-danger"
                 style="height: 30px; display: flex; align-items: center; justify-content: center;">
                 <b>Register</b>
               </button>
