--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
           <!-- Third column -->
           <div class="col-12 col-md-7 col-lg-4 d-flex justify-content-center align-items-center mt-2">
             <a class="nav-link" href="../login/signup.html" id="registerLink">
+              <button id="registerButton" type="button" class="btn btn-light text-danger"
                 style="height: 30px; display: flex; align-items: center; justify-content: center;">
                 <b>Register</b>
               </button>
