confirm booking page and other pages sign in and register button bugs are cleared and scrool able navbar bug are cleared

--- a/reservation-page/reservation.html
+++ b/reservation-page/reservation.html
@@ -78,13 +78,13 @@
               </div>
               <!-- Third column -->
               <div class="col-12 col-md-7 col-lg-4 d-flex justify-content-center align-items-center mt-2">
-                <a class="nav-link" href="../login/signup.html" id="registerLink">
+                <a class="nav-link px-2" href="../login/signup.html" id="registerLink">
                   <button id="registerButton" type="button" class="btn btn-light text-danger"
                     style="height: 30px; display: flex; align-items: center; justify-content: center;">
                     <b>Register</b>
                   </button>
                 </a>
-                <a class="nav-link" href="../login/index.html" id="loginLink">
+                <a class="nav-link px-2" href="../login/index.html" id="loginLink">
                   <button id="loginButton" type="button" class="btn btn-light text-danger"
                     style="height: 30px; display: flex; align-items: center; justify-content: center;">
                     <b>Login</b>
