--- a/single-hotel-page/index.html
+++ b/single-hotel-page/index.html
@@ -59,13 +59,13 @@
           </div>
           <!-- Third column -->
           <div class="col-12 col-md-7 col-lg-4 d-flex justify-content-center align-items-center mt-2">
-            <a class="nav-link" href="../login/signup.html" id="registerLink">
+            <a class="nav-link px-2" href="../login/signup.html" id="registerLink">
               <button id="registerButton" type="button" class="btn btn-light text-danger"
                 style="height: 30px; display: flex; align-items: center; justify-content: center;">
                 <b>Register</b>
               </button>
             </a>
-            <a class="nav-link" href="../login/index.html" id="loginLink">
+            <a class="nav-link px-2" href="../login/index.html" id="loginLink">
               <button id="loginButton" type="button" class="btn btn-light text-danger"
                 style="height: 30px; display: flex; align-items: center; justify-content: center;">
                 <b>Login</b>
@@ -81,7 +81,7 @@
                   <i class="fa-solid fa-user p-2 text-white fw-bold"></i>
                 </a>
                 <!-- Dropdown - User Information -->
-                <div class="dropdown-menu dropdown-menu-right shadow animated--grow-in " aria-labelledby="userDropdown">
+                <div class="dropdown-menu dropdown-menu-right shadow animated--grow-in mx-auto" aria-labelledby="userDropdown">
                   <a class="dropdown-item" href="#">
                     <i class="fas fa-user fa-sm fa-fw mr-2 text-gray-400"></i>
                     Profile
